# ipow2-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: asm.rs  internal.rs  public.rs
docs/: README.md  asm-aarch64-pc-windows-msvc-apple-m1.md  asm-aarch64-pc-windows-msvc-generic.md  asm-aarch64.md  asm-x86_64-pc-windows-msvc-generic.md  asm-x86_64-pc-windows-msvc-raptorlake.md  asm-x86_64-pc-windows-msvc-znver4.md  asm-x86_64.md  bench-default.md  bench-native.md  mca-apple-m1.md  mca-raptorlake.md  mca-znver4.md
scripts/: bench_windows_native.bat  make_asm_docs.py  make_bench_docs.py
src/: lib.rs  private.rs
